# winston

./: CLAUDE.md  STEERING.md  pyproject.toml
config/: benchmark_utterances.yaml  default.yaml  scene_benchmark_scenarios.yaml
data/benchmark/: easy_001.json  easy_002.json  easy_004.json  easy_005.json  easy_008.json  easy_012.json  easy_013.json  easy_014.json  easy_015.json  hard_001.json  hard_002.json  hard_003.json  hard_004.json  hard_005.json  hard_006.json  hard_007.json  hard_009.json  hard_010.json  hard_011.json  hard_012.json  hard_013.json  hard_014.json  hard_015.json  medium_001.json  medium_002.json  medium_003.json  medium_005.json  medium_008.json  medium_009.json  medium_010.json  medium_015.json
data/benchmark/evals/: 20260226T175435_base.json  20260226T180215_base-normalized.json
docs/: LESSONS_LEARNED.md  PROJECT_STRUCTURE.md  flywheel_setup.md  iteration_framework.md
docs/architecture/: brain.md  design_decisions.md  expression.md  memory.md  mqtt_topics.md  perception.md  skills_roles.md
docs/phases/: phase_a_perception.md  phase_b_cerebellum.md  phase_c_e2e.md  phase_d_dreaming.md
notebooks/: whisper_finetune.ipynb
prompts/event_detection/: README.md  cooking_prep.yaml
scripts/: check_collection.py  create_benchmark_set.py  create_scene_benchmark.py  detect_event.py  download_adapter.py  evaluate_scene.py  evaluate_vlm.py  evaluate_whisper.py  label_scene_data.py  review_scene_labels.py  upload_training_data.py
src/debug/: memory_monitor.py
src/perception/: camera.py  scene.py  scene_service.py  service.py  stt.py  vad.py
src/perception/vlm/: __init__.py  base.py  internvl2.py  moondream.py
src/transport/: client.py  topics.py
